Modificaciones menores, enlaces, titulos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -69,5 +69,6 @@
     "view users": "Ver usuarios",
     "create users": "Crear usuarios",
     "update users": "Actualizar usuarios",
-    "delete users": "Eliminar usuarios"
+    "delete users": "Eliminar usuarios",
+    "doctors":"medicos"
 }
