actualizacion db (pendiente impresion de informes)

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -75,5 +75,6 @@
     "Save": "Guardar",
     "Zoom Duration": "Duración de reunión",
     "Zoom Password": "Password de reunión",
-    "doctors":"medicos"
+    "doctors":"medicos",
+    "today":"hoy"
 }
